removed max-height from resolve-modal modal-body - no nested scrollbars plz

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -272,7 +272,6 @@ resolve-modal {
 
     .modal-body {
         margin: 18px 40px 100px;
-        max-height: 600px;
         overflow: auto;
     }
 
